--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,1 @@
-VITE_API_CURRENT_DOMAIN=
-VITE_API_PROXY_URL=https://capetownlists.co.za/?url=
-VITE_API_BACKEND_URL=https://api.airtable.com/v0/appVY1Zwf71mOzczr
-VITE_API_SITE_TITLE=The Gas Pad | Quick and Efficient
+VITE_CACHE_BASE=http://localhost/2025-12-Airtable-Data-and-Vue-Html-Cacher/public
