--- a/public/html-cache/.htaccess
+++ b/public/html-cache/.htaccess
@@ -1,3 +1,11 @@
+<IfModule mod_headers.c>
+  <Files "pages.json">
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods "GET, OPTIONS"
+    Header set Access-Control-Allow-Headers "*"
+  </Files>
+</IfModule>
+
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteRule ^ - [L]
