--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ yarn-error.log*
 /public/data-cache/cache
 public/data-cache/config.json
 public/html-cache/pages.json
+public/html-cache/sitemaps.json
