--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VITE_CACHE_BASE=http://localhost/2025-12-Airtable-Data-and-Vue-Html-Cacher/public
+VITE_CACHE_BASE=https://the-gas-pad.letsnetworkhub.com/cacher
