--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,7 +5,7 @@
     # RewriteCond %{HTTPS} off
     # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-    RewriteBase /cacher/
+    RewriteBase /integrator/
 
     # Allow real files and folders
     RewriteRule ^(data-cache|html-cache)(/.*)?$ - [L]
