--- a/public/data-acceptance/env.json.example
+++ b/public/data-acceptance/env.json.example
@@ -1,20 +1,44 @@
 {
   "source": {
-    "base_url": "https://letsnetworkhub.com/wp-json/wp/v2",
+    "base_url": "https://profix.letsnetworkhub.com/wp-json/wp/v2",
     "base_id": null
   },
   "target": {
     "base_url": "https://api.airtable.com/v0",
-    "base_id": "appWL8gDT9ZaqV8jY"
+    "base_id": "appiRyyfunjDryXKy"
   },
   "entities": [
     {
       "source_entity_name": "job_listing",
-      "target_entity_name": "Art"
+      "target_entity_name": "Artist",
+      "fields": [
+        {
+          "norm_name": "Title",
+          "source_path": "mylisting.fields.job_title",
+          "target_path": "fields.Name"
+        },
+        {
+          "norm_name": "Location",
+          "source_path": "mylisting.fields.job_location[0].address",
+          "target_path": "fields.Description"
+        }
+      ]
     },
     {
       "source_entity_name": "job_listing",
-      "target_entity_name": "Artist"
+      "target_entity_name": "Art",
+      "fields": [
+        {
+          "norm_name": "Name",
+          "source_path": "mylisting.fields.job_title",
+          "target_path": "fields.Name"
+        },
+        {
+          "norm_name": "Short_Desc",
+          "source_path": "mylisting.fields.job_description",
+          "target_path": "fields['Short Description (150 chars)']"
+        }
+      ]
     }
   ]
 }
